ANGLE: Fix WebGL conformance tests for EXT_texture_filter_anisotropic https://bugs.webkit.org/show_bug.cgi?id=205520

Fixes get-extension.html and ext-texture-filter-anisotropic.html.

Patch by James Darpinian <jdarpinian@chromium.org> on 2019-12-27
Reviewed by Dean Jackson.

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::getExtension):
(WebCore::WebGL2RenderingContext::getSupportedExtensions):
(WebCore::WebGL2RenderingContext::getParameter):
* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getExtension):
* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::getTexParameter):

Canonical link: https://commits.webkit.org/218795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253919 268f45cc-cd09-0410-ab3c-d52691b4dbfc